- 
    Bug 
- 
    Resolution: Fixed
- 
    P2: Important 
- 
    5.3.1, 5.4.0 RC
- 
    Ubuntu 64-bit 12.04 LTS and Nexus 7 with Android 4.4.3
- 
        
- 
        2021wk44POAndroid&Mobile, 2021wk46POAndroid&Mobile, 2021wk48POAndroid&Mobile, 2021wk50POAndroid&Mobile
The back button behaves normally until the virtual keyboard pops up on tapping the TextField in the TextInputPage. After closing the virtual keyboard in TextInputPage, the back button works perfectly till you get to the main page. From now on, the back button from any of the pages listed in the main page will close the app.
Using the top navigation bar of the app to get to the previous page works 
perfectly no matter what.
Here is the stack trace:
Starting remote process.D/dalvikvm( 5757): Late-enabling CheckJNI
D/dalvikvm( 5757): GC_CONCURRENT freed 233K, 4% free 7814K/8076K, paused 18ms+2ms, total 82ms
D/dalvikvm( 5757): GC_CONCURRENT freed 419K, 6% free 7821K/8280K, paused 3ms+2ms, total 48ms
D/dalvikvm( 5757): Trying to load lib /data/data/org.qtproject.example.touch/lib/libgnustl_shared.so 0x41d89400
D/dalvikvm( 5757): Added shared lib /data/data/org.qtproject.example.touch/lib/libgnustl_shared.so 0x41d89400
D/dalvikvm( 5757): No JNI_OnLoad found in /data/data/org.qtproject.example.touch/lib/libgnustl_shared.so 0x41d89400, skipping init
D/dalvikvm( 5757): Trying to load lib /data/data/org.qtproject.example.touch/lib/libQt5Core.so 0x41d89400
D/dalvikvm( 5757): Added shared lib /data/data/org.qtproject.example.touch/lib/libQt5Core.so 0x41d89400
D/dalvikvm( 5757): Trying to load lib /data/data/org.qtproject.example.touch/lib/libQt5Network.so 0x41d89400
D/dalvikvm( 5757): Added shared lib /data/data/org.qtproject.example.touch/lib/libQt5Network.so 0x41d89400
I/Qt      ( 5757): Network start
D/dalvikvm( 5757): Trying to load lib /data/data/org.qtproject.example.touch/lib/libQt5Qml.so 0x41d89400
D/dalvikvm( 5757): Added shared lib /data/data/org.qtproject.example.touch/lib/libQt5Qml.so 0x41d89400
D/dalvikvm( 5757): No JNI_OnLoad found in /data/data/org.qtproject.example.touch/lib/libQt5Qml.so 0x41d89400, skipping init
D/dalvikvm( 5757): Trying to load lib /data/data/org.qtproject.example.touch/lib/libQt5Gui.so 0x41d89400
D/dalvikvm( 5757): Added shared lib /data/data/org.qtproject.example.touch/lib/libQt5Gui.so 0x41d89400
D/dalvikvm( 5757): No JNI_OnLoad found in /data/data/org.qtproject.example.touch/lib/libQt5Gui.so 0x41d89400, skipping init
D/dalvikvm( 5757): Trying to load lib /data/data/org.qtproject.example.touch/lib/libQt5Quick.so 0x41d89400
D/dalvikvm( 5757): Added shared lib /data/data/org.qtproject.example.touch/lib/libQt5Quick.so 0x41d89400
D/dalvikvm( 5757): No JNI_OnLoad found in /data/data/org.qtproject.example.touch/lib/libQt5Quick.so 0x41d89400, skipping init
D/dalvikvm( 5757): Trying to load lib /data/data/org.qtproject.example.touch/lib/libQt5QuickParticles.so 0x41d89400
D/dalvikvm( 5757): Added shared lib /data/data/org.qtproject.example.touch/lib/libQt5QuickParticles.so 0x41d89400
D/dalvikvm( 5757): No JNI_OnLoad found in /data/data/org.qtproject.example.touch/lib/libQt5QuickParticles.so 0x41d89400, skipping init
D/dalvikvm( 5757): Trying to load lib /data/data/org.qtproject.example.touch/qt-reserved-files/plugins/platforms/android/libqtforandroid.so 0x41d89400
D/dalvikvm( 5757): Added shared lib /data/data/org.qtproject.example.touch/qt-reserved-files/plugins/platforms/android/libqtforandroid.so 0x41d89400
I/Qt      ( 5757): qt start
D/dalvikvm( 5757): Trying to load lib /data/data/org.qtproject.example.touch/lib/libQt5QuickParticles.so 0x41d89400
D/dalvikvm( 5757): Shared lib '/data/data/org.qtproject.example.touch/lib/libQt5QuickParticles.so' already loaded in same CL 0x41d89400
D/dalvikvm( 5757): Trying to load lib /data/app-lib/org.qtproject.example.touch-1/libtouch.so 0x41d89400
D/Qt      ( 5757): qml/qqmlengine.cpp:1454 (QQmlDebuggingEnabler::QQmlDebuggingEnabler(bool)): QML debugging is enabled. Only use this in a safe environment.
D/dalvikvm( 5757): Added shared lib /data/app-lib/org.qtproject.example.touch-1/libtouch.so 0x41d89400
D/dalvikvm( 5757): No JNI_OnLoad found in /data/app-lib/org.qtproject.example.touch-1/libtouch.so 0x41d89400, skipping init
D/libEGL  ( 5757): loaded /system/lib/egl/libEGL_tegra.so
D/libEGL  ( 5757): loaded /system/lib/egl/libGLESv1_CM_tegra.so
D/libEGL  ( 5757): loaded /system/lib/egl/libGLESv2_tegra.so
D/OpenGLRenderer( 5757): Enabling debug mode 0
D/dalvikvm( 5757): GC_CONCURRENT freed 465K, 7% free 7754K/8300K, paused 2ms+10ms, total 28ms
D/Qt      ( 5757): fontdatabases/basic/qbasicfontdatabase.cpp:239 (static QStringList QBasicFontDatabase::addTTFile(const QByteArray&, const QByteArray&, QSupportedWritingSystems*)): FT_New_Face failed with index 0 : 90
W/Qt      ( 5757): scenegraph/qsgcontext.cpp:433 (virtual void QSGRenderContext::initialize(QOpenGLContext*)): QSGContext::initialize: stencil buffer support missing, expect rendering errors
W/IInputConnectionWrapper( 5757): getTextBeforeCursor on inactive InputConnection
W/IInputConnectionWrapper( 5757): getTextBeforeCursor on inactive InputConnection
W/IInputConnectionWrapper( 5757): getTextBeforeCursor on inactive InputConnection
W/Qt      ( 5757): kernel/qmetaobject.cpp:1458 (static bool QMetaObject::invokeMethod(QObject*, const char*, Qt::ConnectionType, QGenericReturnArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument)): QMetaObject::invokeMethod: No such method QQuickTextInput::inputMethodQuery(Qt::InputMethodQuery,QVariant)
W/Qt      ( 5757): kernel/qmetaobject.cpp:1458 (static bool QMetaObject::invokeMethod(QObject*, const char*, Qt::ConnectionType, QGenericReturnArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument)): QMetaObject::invokeMethod: No such method QQuickTextInput::inputMethodQuery(Qt::InputMethodQuery,QVariant)
W/Qt      ( 5757): kernel/qmetaobject.cpp:1458 (static bool QMetaObject::invokeMethod(QObject*, const char*, Qt::ConnectionType, QGenericReturnArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument)): QMetaObject::invokeMethod: No such method QQuickTextInput::inputMethodQuery(Qt::InputMethodQuery,QVariant)
W/Qt      ( 5757): kernel/qmetaobject.cpp:1458 (static bool QMetaObject::invokeMethod(QObject*, const char*, Qt::ConnectionType, QGenericReturnArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument)): QMetaObject::invokeMethod: No such method QQuickTextInput::inputMethodQuery(Qt::InputMethodQuery,QVariant)
D/dalvikvm( 5757): GC_CONCURRENT freed 385K, 7% free 7756K/8296K, paused 1ms+1ms, total 21ms
W/Qt      ( 5757): kernel/qmetaobject.cpp:1458 (static bool QMetaObject::invokeMethod(QObject*, const char*, Qt::ConnectionType, QGenericReturnArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument)): QMetaObject::invokeMethod: No such method QQuickTextInput::inputMethodQuery(Qt::InputMethodQuery,QVariant)
W/Qt      ( 5757): kernel/qmetaobject.cpp:1458 (static bool QMetaObject::invokeMethod(QObject*, const char*, Qt::ConnectionType, QGenericReturnArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument)): QMetaObject::invokeMethod: No such method QQuickTextInput::inputMethodQuery(Qt::InputMethodQuery,QVariant)
W/Qt      ( 5757): kernel/qmetaobject.cpp:1458 (static bool QMetaObject::invokeMethod(QObject*, const char*, Qt::ConnectionType, QGenericReturnArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument)): QMetaObject::invokeMethod: No such method QQuickTextInput::inputMethodQuery(Qt::InputMethodQuery,QVariant)
W/Qt      ( 5757): kernel/qmetaobject.cpp:1458 (static bool QMetaObject::invokeMethod(QObject*, const char*, Qt::ConnectionType, QGenericReturnArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument)): QMetaObject::invokeMethod: No such method QQuickRootItem::inputMethodQuery(Qt::InputMethodQuery,QVariant)
W/Qt      ( 5757): kernel/qmetaobject.cpp:1458 (static bool QMetaObject::invokeMethod(QObject*, const char*, Qt::ConnectionType, QGenericReturnArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument)): QMetaObject::invokeMethod: No such method QQuickRootItem::inputMethodQuery(Qt::InputMethodQuery,QVariant)
W/Qt      ( 5757): androidjnimain.cpp:542 (void setSurface(JNIEnv*, jobject, jint, jobject, jint, jint)): Can't find surface 1
W/Qt      ( 5757): androidjnimain.cpp:542 (void setSurface(JNIEnv*, jobject, jint, jobject, jint, jint)): Can't find surface 2
W/IInputConnectionWrapper( 5757): showStatusIcon on inactive InputConnection
- relates to
- 
                    QTBUG-42478 Physical button doesn't work on Android (Qt 5.3.1) -           
- Closed
 
-         
| For Gerrit Dashboard: QTBUG-40501 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 385243,3 | Fix touch gallery example crashes on exit | dev | qt/qtquickcontrols | Status: MERGED | +2 | 0 |