Fix touch gallery example crashes on exit

Task-number: QTBUG-40501
Change-Id: I8c51818e8846be3a2813ac2fa8871a9d75c22439
Reviewed-by: Ville Voutilainen <ville.voutilainen@qt.io>